microservices/virtual-services/virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-services
spec:
  hosts:
    - "istio.local"
  gateways:
    - istio-system/microservice-gateway
  http:
    - match:
        - uri:
            prefix: /shipping/
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 80
            host: shipping.microservices.svc.cluster.local
    - match:
        - uri:
            prefix: /invoicing/
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 80
            host: invoicing.microservices.svc.cluster.local
    - match:
        - uri:
            prefix: /order/
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 80
            host: order.microservices.svc.cluster.local
    - match:
        - uri:
            prefix: /bonus/
      rewrite:
        uri: /
      route:
        - destination:
            port:
              number: 8080
            host: bonus.microservices.svc.cluster.local
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: apache.microservices.svc.cluster.local
